[package]
name = "image_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.1"
glutin = { version = "0.29.1" }
winapi = { version = "0.3", git = "https://github.com/yvt/winapi-rs/#a6df41df91d6b8c156cff69bede2da2196c663cb",features = ["processthreadsapi","memoryapi","windef","minwindef","gdiplusinit","gdiplusflat","winbase","combaseapi","objidlbase"]}